fixed z-index for stars

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -311,7 +311,7 @@ article.hero {
   }
   img.rocket {
     position: relative;
-    z-index: 0;
+    z-index: 6;
     width: 100%;
     margin-top: -16rem;
     @media (max-width: 992px) {
